# pyassistant

./: README.md  pyproject.toml
src/: main.py
src/pyassistant/: aigpt.py  core.py  speak.py  speaker.py  takeq.py
src/pyassistant/method/: hello.py  takeCommand.py  tellTime.py
