[project]
name = "pyassistant"
version = "0.1.0"
description = "Python assistant framework"
authors = [
    {name = "Fabio Felici", email = "fabio.felici96c@gmail.com"},
]
dependencies = [
    "SpeechRecognition>=3.10.0",
    "wikipedia>=1.4.0",
    "pyttsx4>=3.0.15",
    "pyaudio>=0.2.13",
    "openai>=0.27.8",
    "loguru>=0.7.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
